# model-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SPEC.md  TODO.md
benches/: throughput.rs
examples/: README.md  library_run_cli.rs  library_sampling.rs
src/: cli.rs  config.rs  download.rs  error.rs  format.rs  lib.rs  main.rs  model_ops.rs  models.rs  output.rs  search.rs
src/influencer/: mod.rs  server.rs  service.rs
src/local/: architecture.rs  backends.rs  batch.rs  cache.rs  config.rs  device.rs  generation.rs  gguf_backend.rs  mlx_backend.rs  mod.rs  model_cache.rs  sampling.rs  tokenization.rs
src/output/: code_highlight.rs  markdown_stream.rs
tests/: README.md  e2e_test.rs  integration_test.rs
