[package]
name = "model-rs"
version = "0.1.0"
edition = "2024"
authors = ["Ying Kit WONG"]
description = "A Rust CLI tool for downloading HuggingFace models and running local LLM inference"
repository = "https://github.com/yingkitw/model-rs"
license = "Apache-2.0"
keywords = ["llm", "machine-learning", "huggingface", "inference", "cli"]
categories = ["command-line-utilities", "science", "api-bindings"]
readme = "README.md"

[lib]
name = "model_rs"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hf-hub = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "net", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
futures-util = "0.3"
urlencoding = "2.1"
rand = "0.8"
bytes = "1.9"
directories = "5.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
dotenvy = "0.15"
chrono = "0.4"
termimad = "0.30"
syntect = "5.3"

# Web server dependencies
axum = "0.7"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }

# Local ML inference dependencies
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
candle-kernels = { version = "0.9", optional = true }
candle-metal-kernels = "0.9"
tokenizers = "0.21"
accelerate-src = { version = "0.3", optional = true }

# GGUF support (optional)
llama_cpp = { version = "0.3", optional = true }
gguf-rs-lib = { version = "0.2", optional = true }

# MLX support (optional, macOS Apple Silicon only)
mlx-rs = { version = "0.25", optional = true, default-features = false }

[dev-dependencies]
tempfile = "3.14"
mockito = "1.6"
tower = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[features]
default = ["metal"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["dep:candle-kernels", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["cuda", "candle-core/cudnn"]
nccl = ["cuda", "candle-core/nccl"]
gguf = ["dep:llama_cpp", "dep:gguf-rs-lib"]
mlx = ["dep:mlx-rs", "mlx-rs/accelerate"]
mlx-metal = ["mlx", "mlx-rs/metal"]

[[bin]]
name = "model-rs"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
